--- a/202425_algorithms_and_data_structures_in_python_assignment-iiia/group_26_assignment3.ipynb
+++ b/202425_algorithms_and_data_structures_in_python_assignment-iiia/group_26_assignment3.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -75,6 +75,9 @@
     "import csv\n",
     "\n",
     "def load_data(filepath):\n",
+    "    \"\"\"\n",
+    "    Load CSV data from the given filepath, returning the header and data rows as a tuple.\n",
+    "    \"\"\"\n",
     "    with open(filepath, mode='r') as file:\n",
     "        csvfile = csv.reader(file)\n",
     "        list_from_file =list(csvfile)\n",
@@ -85,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -130,32 +133,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "def extract_axis(header, data, request):\n",
-    "    raise NotImplemented"
+    "    \"\"\"\n",
+    "    Extract a column or row from the data based on the request format.\n",
+    "    \"\"\"\n",
+    "    if request[0] == 'col' and int(request[1]) < len(header):\n",
+    "        index = int(request[1])\n",
+    "        column = []\n",
+    "\n",
+    "        for line in data:\n",
+    "            column.append(line[index])\n",
+    "\n",
+    "        result = column\n",
+    "\n",
+    "    elif request[0] == 'row' and int(request[1]) < len(data):\n",
+    "        index = int(request[1])\n",
+    "        row = data[index]\n",
+    "\n",
+    "        result = row\n",
+    "\n",
+    "    else:\n",
+    "        result = []\n",
+    "\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "exceptions must derive from BaseException",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[8], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m request \u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcol\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m2\u001b[39m\u001b[38;5;124m'\u001b[39m) \n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m(extract_axis(header, data, request)[\u001b[38;5;241m0\u001b[39m:\u001b[38;5;241m5\u001b[39m] \u001b[38;5;241m==\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m926389620\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m926418960\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m926418960\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m926430480\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m926498640\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[0;32m      3\u001b[0m request \u001b[38;5;241m=\u001b[39m (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcol\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m5\u001b[39m\u001b[38;5;124m'\u001b[39m) \n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m(extract_axis(header, data, request) \u001b[38;5;241m==\u001b[39m [])\n",
-      "Cell \u001b[1;32mIn[7], line 2\u001b[0m, in \u001b[0;36mextract_axis\u001b[1;34m(header, data, request)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mextract_axis\u001b[39m(header, data, request):\n\u001b[1;32m----> 2\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mNotImplemented\u001b[39m\n",
-      "\u001b[1;31mTypeError\u001b[0m: exceptions must derive from BaseException"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "request = ('col', '2') \n",
     "assert(extract_axis(header, data, request)[0:5] == ['926389620', '926418960', '926418960', '926430480', '926498640'])\n",
@@ -189,17 +200,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def count_emails(header, data):\n",
-    "\t\traise NotImplemented"
+    "\t\"\"\"\n",
+    "    Count the number of emails sent and received by each user.\n",
+    "    \"\"\"\n",
+    "\temail_dict = {}\n",
+    "\n",
+    "\tfor row in data:\n",
+    "\t\tif row[0] not in email_dict:\n",
+    "\t\t\temail_dict[row[0]] = [1, 0]\n",
+    "\n",
+    "\t\telse:\n",
+    "\t\t\temail_dict[row[0]][0] = email_dict[row[0]][0] + 1\n",
+    "\n",
+    "\t\n",
+    "\t\tif row[1] not in email_dict:\n",
+    "\t\t\temail_dict[row[1]] = [0, 1]\n",
+    "\n",
+    "\t\telse:\n",
+    "\t\t\temail_dict[row[1]][1] = email_dict[row[1]][1] + 1\n",
+    "\n",
+    "\treturn email_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,17 +250,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def user_interact_times(header, data, user):\n",
-    "\t\traise NotImplemented"
+    "\t\"\"\"\n",
+    "    Retrieve timestamps of emails sent or received by a specified user.\n",
+    "    \"\"\"\n",
+    "\ttimestamps = []\n",
+    "\n",
+    "\tfor row in data:\n",
+    "\t\tif row[0] == user or row[1] == user:\n",
+    "\t\t\ttimestamps.append(row[2])\n",
+    "\t\n",
+    "\treturn timestamps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,16 +308,22 @@
     "from datetime import datetime\n",
     "\n",
     "def convert_timestamp(row):\n",
+    "    \"\"\"\n",
+    "    Convert the timestamp in a row to a human-readable format and append it to the row.\n",
+    "    \"\"\"\n",
     "    timestamp = int(row[2])\n",
     "    new_timestamp = datetime.fromtimestamp(timestamp).strftime('%Y-%m-%d %H:%M:%S')\n",
     "    row.append(new_timestamp)\n",
     "    return row\n",
     "\n",
     "def format_timestamp(header, data):\n",
-    "\t\tnew_header = header + ['formatted_timestamp']\n",
-    "\t\tformat_timestamp = list(map(convert_timestamp, data))\n",
-    "\t\tprint(format_timestamp)\n",
-    "\t\treturn new_header, format_timestamp"
+    "    \"\"\"\n",
+    "    Format timestamps in the data and return updated header and formatted data.\n",
+    "    \"\"\"\n",
+    "    new_header = header + ['formatted_timestamp']\n",
+    "    format_timestamp = list(map(convert_timestamp, data))\n",
+    "    print(format_timestamp)\n",
+    "    return new_header, format_timestamp"
    ]
   },
   {
