Added skeleton for part 2

--- a/group_26_assignment4.ipynb
+++ b/group_26_assignment4.ipynb
@@ -272,6 +272,49 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "62933106",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import networkx as nx\n",
+    "from sympy import symbols, solve, Eq\n",
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "class RailwayNetwork:\n",
+    "  def __init__(self):\n",
+    "      self.network = nx.DiGraph()\n",
+    "  \n",
+    "  def add_railway_station(self, railway_station_name, railway_station_code):\n",
+    "     self.network.add_node(railway_station_code, name=railway_station_name)\n",
+    "    \n",
+    "  def set_route(self, src_railway_station_code, dst_railway_station_code, price):\n",
+    "      self.network.add_edge(src_railway_station_code, dst_railway_station_code, weight=price)\n",
+    "\n",
+    "  def modify_route_price(self, src_railway_station_code, dst_railway_station_code, new_price):\n",
+    "      self.network.add_edge(src_railway_station_code, dst_railway_station_code, weight=new_price)\n",
+    "\n",
+    "  def del_route(self, src_railway_station_code, dst_railway_station_code):\n",
+    "      self.network.remove_edge(src_railway_station_code, dst_railway_station_code)\n",
+    "  \n",
+    "  def get_network_graph(self):\n",
+    "      pos = nx.spring_layout(self.network)\n",
+    "      nx.draw(self.network, pos, with_labels=True)\n",
+    "      edge_labels = nx.get_edge_attributes(self.network, \"weight\")\n",
+    "      nx.draw_networkx_edge_labels(self.network, pos, edge_labels)\n",
+    "      return self\n",
+    "  \n",
+    "n = RailwayNetwork()\n",
+    "n.add_railway_station('Amsterdam', 'Asd')\n",
+    "n.add_railway_station('Amsterdam Zuid', 'Asdz')\n",
+    "n.set_route('Asd', 'Asdz', 5)\n",
+    "n.modify_route_price('Asd', 'Asdz', 6)\n",
+    "n.del_route('Asd', 'Asdz')\n",
+    "n.get_network_graph()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "74a3fec5",
    "metadata": {},
@@ -286,7 +329,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
